        Added Russian translation (Anton Dobkin)
        Added Tamil translation (I. Felix)
        Added Telugu translation (Krishna Babu)
        Updated Polish translation (Piotr Drąg)
        Updated Panjabi translation (A S Alam)
        optimize order of commands in util/cracklib-format (Jan Dittberner, Debian)
        fix several CC warnings (Jan Dittberner, Debian)
v2.8.13 Compressed dictionary support and better python module
v2.8.11 Better create-cracklib-dict helper script (Mike Frysinger)
v2.8.10 Patch for better hanlding of cracklist dictionary paths in python binding. (Nalin Dahyabhai)
v2.8.8	Some shell quoting fixups for build scripts (Mike Frysinger)
v2.8.7  Add support for NLS builds on FreeBSD
v2.8.6  Add some sanity checkng to auto* script calls. (Mike Frysinger)
        Add support for cross compiling with a local dictionary
        Add a configure option to control default dictionary path
      	Adjustments to prototypes to use const, and more language support. (Thorsten Kukuk <kukuk@suse.de>)
v2.8.5  Patches for python build and missing config.rpath
v2.8.4  Patches for mod_php build issues
        Full localization of strings thanks to Thorsten Kukuk.
	Patches for python binding support thanks to Nalin Dahyabhai
v2.8.3  Deal with integer type and header portability issues
v2.8.2  Check for LINE_MAX, cygwin workaround (sf patch #125964, Jürgen)
	Fix a buffer overflow in packlib file handling (not a security issue)
	  patch provided as #126097 by Jürgen
v2.8.1	Install packer.h, php needs it, and address prototypes
v2.8	new package, auto'ified with libtool and numerous bug fixes, forked
	from original v2.7 distribution with the approval of the author
v2.7    mkdict/tr problem eliminated;
	misc fixes suggested by Andrey Savochkin <saw@msu.ru> (with thanks)
v2.6    buffer overflow problems addressed - 1st attempt
	permutations of fascist deconstructors fixed/enhanced
v2.5    added decent info to the "shadow" directory patches.