@@ -12,6 +12,9 @@ v2.8.14 Added Assamese translation (Amitakhya Phukan)
         Updated Panjabi translation (A S Alam)
         optimize order of commands in util/cracklib-format (Jan Dittberner, Debian)
         fix several CC warnings (Jan Dittberner, Debian)
+        add a function GetDefaultCracklibDict() to libcrack
+        bump library revision
+        add python/setup.py.in to allow building eggs
 v2.8.13 Compressed dictionary support and better python module
 v2.8.11 Better create-cracklib-dict helper script (Mike Frysinger)
 v2.8.10 Patch for better hanlding of cracklist dictionary paths in python binding. (Nalin Dahyabhai)
